# image_to_ascii

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  image_to_ascii  main.cpp  main.d  output.txt  output_2.txt
src/: ascii_to_image.cpp  ascii_to_image.h  ascii_to_image.hpp  bitmap.cpp  bitmap.h  image_to_ascii.cpp  image_to_ascii.h  image_to_ascii.hpp
