cmake_minimum_required(VERSION 2.8.12)
project(image_to_ascii)
set (CMAKE_CXX_STANDARD 20)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
file(GLOB SOURCES "src/*.cpp")
add_executable(image_to_ascii ${SOURCES} main.cpp)
target_link_libraries(image_to_ascii ${OpenCV_LIBS})
